# GAMES

./: README.md
GAMES101/Assignment1/code/: main.cpp  rasterizer.cpp
GAMES101/Assignment2/code/: main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/Assignment3/code/: Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/Assignment4/code/: main.cpp
GAMES101/Assignment5/code/: Renderer.cpp  Triangle.hpp
GAMES101/Assignment6/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
GAMES101/Assignment7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
GAMES101/Assignment7/code/image1/: binary_0d05_1d9.ppm  binary_0d05_4.ppm  binary_0d2_1d6.ppm  binary_0d9_1d6.ppm  binary_16.ppm  binary_256.ppm  binary_diffuse.ppm
GAMES101/Assignment8/code/src/: rope.cpp
GAMES101/pa0/: main  main.cpp
